# Integration

./: README.md
Optimo-Model-Selection/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
Optimo-Model-Selection/model-training/: TF-IDF.ipynb  data-prep-4o-mini.ipynb  data-prep-4o.ipynb  train.ipynb
optimo_fe/src/lib/: api.js
