[project]
name = "net-zero-model-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "python-multipart>=0.0.20",
    "sentencepiece>=0.2.0",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.3",
]
